--- a/2024_winapigamep_framework_22/2024_winapigamep_framework_22.vcxproj
+++ b/2024_winapigamep_framework_22/2024_winapigamep_framework_22.vcxproj
@@ -192,7 +192,7 @@
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TimeManager.h" />
     <ClInclude Include="TitleScene.h" />
-    <ClInclude Include="UIManager.h" />
+    <ClInclude Include="UI_Health.h" />
     <ClInclude Include="Vec2.h" />
   </ItemGroup>
   <ItemGroup>
@@ -219,7 +219,7 @@
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TimeManager.cpp" />
     <ClCompile Include="TitleScene.cpp" />
-    <ClCompile Include="UIManager.cpp" />
+    <ClCompile Include="UI_Health.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="2024_winapigamep_framework_22.rc" />
