--- a/2024_winapigamep_framework_22/2024_winapigamep_framework_22.vcxproj
+++ b/2024_winapigamep_framework_22/2024_winapigamep_framework_22.vcxproj
@@ -192,6 +192,7 @@
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TimeManager.h" />
     <ClInclude Include="TitleScene.h" />
+    <ClInclude Include="UI_Energy.h" />
     <ClInclude Include="UI_Health.h" />
     <ClInclude Include="Vec2.h" />
   </ItemGroup>
@@ -219,6 +220,7 @@
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TimeManager.cpp" />
     <ClCompile Include="TitleScene.cpp" />
+    <ClCompile Include="UI_Energy.cpp" />
     <ClCompile Include="UI_Health.cpp" />
   </ItemGroup>
   <ItemGroup>
