--- a/2024_winapigamep_framework_22/2024_winapigamep_framework_22.vcxproj.filters
+++ b/2024_winapigamep_framework_22/2024_winapigamep_framework_22.vcxproj.filters
@@ -47,14 +47,14 @@
     <Filter Include="Engine\00.Work\Baek\03.Object">
       <UniqueIdentifier>{f5a9e72f-b80a-416f-8b93-f4191e843ae4}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Engine\03. Object\Boss\Pattern\Default">
-      <UniqueIdentifier>{901257ef-1161-45e4-806a-75ca29cbd2b4}</UniqueIdentifier>
+    <Filter Include="Engine\00.Work\InHae">
+      <UniqueIdentifier>{fa471a6e-3d95-49c2-8281-2b05ccd30597}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Engine\03. Object\Boss\Pattern\Stage1">
-      <UniqueIdentifier>{71225681-2374-4bcc-9ae2-922a419a37e6}</UniqueIdentifier>
+    <Filter Include="Engine\00.Work\InHae\Boss">
+      <UniqueIdentifier>{cd53046c-f930-44dc-8341-45df1e145d4c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Engine\03. Object\Boss\Pattern\Stage2">
-      <UniqueIdentifier>{c8e5d37d-b9fb-411c-a473-cf4726433375}</UniqueIdentifier>
+    <Filter Include="Engine\00.Work\InHae\Boss\Pattern">
+      <UniqueIdentifier>{fd8e1930-ac1d-49be-8a09-4fe8040f6041}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -154,11 +154,25 @@
     <ClInclude Include="Ground.h">
       <Filter>Engine\00.Work\Baek\03.Object</Filter>
     </ClInclude>
+    <ClInclude Include="RigidBody.h" />
+    <ClInclude Include="UI_Health.h" />
+    <ClInclude Include="BossTestScene.h">
+      <Filter>Engine\00.Work\InHae</Filter>
+    </ClInclude>
+    <ClInclude Include="Boss.h">
+      <Filter>Engine\00.Work\InHae\Boss</Filter>
+    </ClInclude>
+    <ClInclude Include="Stage1Boss.h">
+      <Filter>Engine\00.Work\InHae\Boss</Filter>
+    </ClInclude>
+    <ClInclude Include="BossPattern.h">
+      <Filter>Engine\00.Work\InHae\Boss\Pattern</Filter>
+    </ClInclude>
     <ClInclude Include="CircleBossPattern.h">
-      <Filter>Engine\03. Object\Boss\Pattern</Filter>
+      <Filter>Engine\00.Work\InHae\Boss\Pattern</Filter>
     </ClInclude>
     <ClInclude Include="OneShotPattern.h">
-      <Filter>Engine\03. Object\Boss\Pattern</Filter>
+      <Filter>Engine\00.Work\InHae\Boss\Pattern</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -250,11 +264,25 @@
     <ClCompile Include="Ground.cpp">
       <Filter>Engine\00.Work\Baek\03.Object</Filter>
     </ClCompile>
+    <ClCompile Include="RigidBody.cpp" />
+    <ClCompile Include="UI_Health.cpp" />
+    <ClCompile Include="BossTestScene.cpp">
+      <Filter>Engine\00.Work\InHae</Filter>
+    </ClCompile>
+    <ClCompile Include="Boss.cpp">
+      <Filter>Engine\00.Work\InHae\Boss</Filter>
+    </ClCompile>
+    <ClCompile Include="Stage1Boss.cpp">
+      <Filter>Engine\00.Work\InHae\Boss</Filter>
+    </ClCompile>
+    <ClCompile Include="BossPattern.cpp">
+      <Filter>Engine\00.Work\InHae\Boss\Pattern</Filter>
+    </ClCompile>
     <ClCompile Include="CircleBossPattern.cpp">
-      <Filter>Engine\03. Object\Boss\Pattern</Filter>
+      <Filter>Engine\00.Work\InHae\Boss\Pattern</Filter>
     </ClCompile>
     <ClCompile Include="OneShotPattern.cpp">
-      <Filter>Engine\03. Object\Boss\Pattern</Filter>
+      <Filter>Engine\00.Work\InHae\Boss\Pattern</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
