--- a/2024_winapigamep_framework_22/2024_winapigamep_framework_22.vcxproj.filters
+++ b/2024_winapigamep_framework_22/2024_winapigamep_framework_22.vcxproj.filters
@@ -186,6 +186,14 @@
     <ClInclude Include="CrossShotPattern.h">
       <Filter>Engine\00.Work\InHae\Boss\Pattern\BulletPattern</Filter>
     </ClInclude>
+    <ClInclude Include="Particle.h" />
+    <ClInclude Include="UI_Button.h" />
+    <ClInclude Include="Background.h">
+      <Filter>Engine\00.Work\Baek\03.Object</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerAttackEffect.h">
+      <Filter>Engine\00.Work\Baek\03.Object</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="2024_winapigamep_framework_22.rc">
@@ -302,5 +310,16 @@
     <ClCompile Include="CrossShotPattern.cpp">
       <Filter>Engine\00.Work\InHae\Boss\Pattern\BulletPattern</Filter>
     </ClCompile>
+    <ClCompile Include="Particle.cpp" />
+    <ClCompile Include="UI_Button.cpp" />
+    <ClCompile Include="Background.cpp">
+      <Filter>Engine\00.Work\Baek\03.Object</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerAttackEffect.cpp">
+      <Filter>Engine\00.Work\Baek\03.Object</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
