--- a/2024_winapigamep_framework_22/2024_winapigamep_framework_22.vcxproj.filters
+++ b/2024_winapigamep_framework_22/2024_winapigamep_framework_22.vcxproj.filters
@@ -186,13 +186,21 @@
     <ClInclude Include="CrossShotPattern.h">
       <Filter>Engine\00.Work\InHae\Boss\Pattern\BulletPattern</Filter>
     </ClInclude>
-    <ClInclude Include="Particle.h" />
     <ClInclude Include="UI_Button.h" />
     <ClInclude Include="Background.h">
       <Filter>Engine\00.Work\Baek\03.Object</Filter>
     </ClInclude>
     <ClInclude Include="PlayerAttackEffect.h">
       <Filter>Engine\00.Work\Baek\03.Object</Filter>
+    </ClInclude>
+    <ClInclude Include="SniperShotPattern.h">
+      <Filter>Engine\00.Work\InHae\Boss\Pattern\BulletPattern</Filter>
+    </ClInclude>
+    <ClInclude Include="Particle.h">
+      <Filter>Engine\00.Work\InHae</Filter>
+    </ClInclude>
+    <ClInclude Include="FollowBulletPattern.h">
+      <Filter>Engine\00.Work\InHae\Boss\Pattern\BulletPattern</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -310,13 +318,21 @@
     <ClCompile Include="CrossShotPattern.cpp">
       <Filter>Engine\00.Work\InHae\Boss\Pattern\BulletPattern</Filter>
     </ClCompile>
-    <ClCompile Include="Particle.cpp" />
     <ClCompile Include="UI_Button.cpp" />
     <ClCompile Include="Background.cpp">
       <Filter>Engine\00.Work\Baek\03.Object</Filter>
     </ClCompile>
     <ClCompile Include="PlayerAttackEffect.cpp">
       <Filter>Engine\00.Work\Baek\03.Object</Filter>
+    </ClCompile>
+    <ClCompile Include="SniperShotPattern.cpp">
+      <Filter>Engine\00.Work\InHae\Boss\Pattern\BulletPattern</Filter>
+    </ClCompile>
+    <ClCompile Include="Particle.cpp">
+      <Filter>Engine\00.Work\InHae</Filter>
+    </ClCompile>
+    <ClCompile Include="FollowBulletPattern.cpp">
+      <Filter>Engine\00.Work\InHae\Boss\Pattern\BulletPattern</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
