--- a/2024_winapigamep_framework_22/2024_winapigamep_framework_22.vcxproj
+++ b/2024_winapigamep_framework_22/2024_winapigamep_framework_22.vcxproj
@@ -174,17 +174,21 @@
     <ClInclude Include="Boss.h" />
     <ClInclude Include="BossTestScene.h" />
     <ClInclude Include="AllRangeCircleBossPattern.h" />
+    <ClInclude Include="BottomShotPattern.h" />
     <ClInclude Include="Collider.h" />
     <ClInclude Include="CollisionManager.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="Core.h" />
     <ClInclude Include="CrossShotPattern.h" />
+    <ClInclude Include="CrossTargetShotPattern.h" />
     <ClInclude Include="Define.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="EntryScene.h" />
     <ClInclude Include="Enums.h" />
     <ClInclude Include="EventManager.h" />
+    <ClInclude Include="FallingShotPattern.h" />
     <ClInclude Include="FollowBulletPattern.h" />
+    <ClInclude Include="FollowBottomShotPattern.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="GDISelector.h" />
@@ -224,15 +228,19 @@
     <ClCompile Include="Boss.cpp" />
     <ClCompile Include="BossTestScene.cpp" />
     <ClCompile Include="AllRangeCircleBossPattern.cpp" />
+    <ClCompile Include="BottomShotPattern.cpp" />
     <ClCompile Include="Collider.cpp" />
     <ClCompile Include="CollisionManager.cpp" />
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="Core.cpp" />
     <ClCompile Include="CrossShotPattern.cpp" />
+    <ClCompile Include="CrossTargetShotPattern.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="EntryScene.cpp" />
     <ClCompile Include="EventManager.cpp" />
+    <ClCompile Include="FallingShotPattern.cpp" />
     <ClCompile Include="FollowBulletPattern.cpp" />
+    <ClCompile Include="FollowBottomShotPattern.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="GDISelector.cpp" />
     <ClCompile Include="Ground.cpp" />
