--- a/2024_winapigamep_framework_22/2024_winapigamep_framework_22.vcxproj
+++ b/2024_winapigamep_framework_22/2024_winapigamep_framework_22.vcxproj
@@ -172,7 +172,7 @@
     <ClInclude Include="BaekScene.h" />
     <ClInclude Include="BaseWindow.h" />
     <ClInclude Include="Boss.h" />
-    <ClInclude Include="BossTestScene.h" />
+    <ClInclude Include="Stage1BossScene.h" />
     <ClInclude Include="AllRangeCircleBossPattern.h" />
     <ClInclude Include="BottomShotPattern.h" />
     <ClInclude Include="Collider.h" />
@@ -196,6 +196,8 @@
     <ClInclude Include="Ground.h" />
     <ClInclude Include="HealthSystem.h" />
     <ClInclude Include="InputManager.h" />
+    <ClInclude Include="Laser.h" />
+    <ClInclude Include="LeftFullLaserPattern.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="BossPattern.h" />
     <ClInclude Include="OneShotPattern.h" />
@@ -204,6 +206,7 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerAttackEffect.h" />
     <ClInclude Include="Projectile.h" />
+    <ClInclude Include="RandomLaserPattern.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="ResourceBase.h" />
     <ClInclude Include="ResourceManager.h" />
@@ -212,6 +215,8 @@
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="SniperShotPattern.h" />
     <ClInclude Include="Stage1Boss.h" />
+    <ClInclude Include="Stage2Boss.h" />
+    <ClInclude Include="Stage2BossScene.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TimeManager.h" />
@@ -228,7 +233,7 @@
     <ClCompile Include="BaekScene.cpp" />
     <ClCompile Include="BaseWindow.cpp" />
     <ClCompile Include="Boss.cpp" />
-    <ClCompile Include="BossTestScene.cpp" />
+    <ClCompile Include="Stage1BossScene.cpp" />
     <ClCompile Include="AllRangeCircleBossPattern.cpp" />
     <ClCompile Include="BottomShotPattern.cpp" />
     <ClCompile Include="Collider.cpp" />
@@ -249,6 +254,8 @@
     <ClCompile Include="Ground.cpp" />
     <ClCompile Include="HealthSystem.cpp" />
     <ClCompile Include="InputManager.cpp" />
+    <ClCompile Include="Laser.cpp" />
+    <ClCompile Include="LeftFullLaserPattern.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="BossPattern.cpp" />
@@ -257,6 +264,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayerAttackEffect.cpp" />
     <ClCompile Include="Projectile.cpp" />
+    <ClCompile Include="RandomLaserPattern.cpp" />
     <ClCompile Include="ResourceBase.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="RigidBody.cpp" />
@@ -264,6 +272,8 @@
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="SniperShotPattern.cpp" />
     <ClCompile Include="Stage1Boss.cpp" />
+    <ClCompile Include="Stage2Boss.cpp" />
+    <ClCompile Include="Stage2BossScene.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TimeManager.cpp" />
     <ClCompile Include="TitleScene.cpp" />
