--- a/2024_winapigamep_framework_22/2024_winapigamep_framework_22.vcxproj
+++ b/2024_winapigamep_framework_22/2024_winapigamep_framework_22.vcxproj
@@ -172,6 +172,7 @@
     <ClInclude Include="BaekScene.h" />
     <ClInclude Include="BaseWindow.h" />
     <ClInclude Include="Boss.h" />
+    <ClInclude Include="HealthSystem.h" />
     <ClInclude Include="Stage1BossScene.h" />
     <ClInclude Include="AllRangeCircleBossPattern.h" />
     <ClInclude Include="BottomShotPattern.h" />
@@ -200,7 +201,7 @@
     <ClInclude Include="Object.h" />
     <ClInclude Include="BossPattern.h" />
     <ClInclude Include="OneShotPattern.h" />
-    <ClInclude Include="Particle.h" />
+    <ClInclude Include="ParticleSystem.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerAttackEffect.h" />
@@ -233,6 +234,7 @@
     <ClCompile Include="BaekScene.cpp" />
     <ClCompile Include="BaseWindow.cpp" />
     <ClCompile Include="Boss.cpp" />
+    <ClCompile Include="HealthSystem.cpp" />
     <ClCompile Include="Stage1BossScene.cpp" />
     <ClCompile Include="AllRangeCircleBossPattern.cpp" />
     <ClCompile Include="BottomShotPattern.cpp" />
@@ -259,7 +261,7 @@
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="BossPattern.cpp" />
     <ClCompile Include="OneShotPattern.cpp" />
-    <ClCompile Include="Particle.cpp" />
+    <ClCompile Include="ParticleSystem.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayerAttackEffect.cpp" />
     <ClCompile Include="Projectile.cpp" />
