--- a/2024_winapigamep_framework_22/2024_winapigamep_framework_22.vcxproj
+++ b/2024_winapigamep_framework_22/2024_winapigamep_framework_22.vcxproj
@@ -175,9 +175,11 @@
     <ClInclude Include="Boss.h" />
     <ClInclude Include="CameraManager.h" />
     <ClInclude Include="CenterFullLaserPattern.h" />
+    <ClInclude Include="GameClearScene.h" />
     <ClInclude Include="HealthSystem.h" />
     <ClInclude Include="LoadingPanel.h" />
     <ClInclude Include="RightFullLaserPattern.h" />
+    <ClInclude Include="SelectScene.h" />
     <ClInclude Include="Stage1BossScene.h" />
     <ClInclude Include="AllRangeCircleBossPattern.h" />
     <ClInclude Include="BottomShotPattern.h" />
@@ -245,9 +247,11 @@
     <ClCompile Include="Boss.cpp" />
     <ClCompile Include="CameraManager.cpp" />
     <ClCompile Include="CenterFullLaserPattern.cpp" />
+    <ClCompile Include="GameClearScene.cpp" />
     <ClCompile Include="HealthSystem.cpp" />
     <ClCompile Include="LoadingPanel.cpp" />
     <ClCompile Include="RightFullLaserPattern.cpp" />
+    <ClCompile Include="SelectScene.cpp" />
     <ClCompile Include="Stage1BossScene.cpp" />
     <ClCompile Include="AllRangeCircleBossPattern.cpp" />
     <ClCompile Include="BottomShotPattern.cpp" />
